--- a/poc-cicd/values.yaml
+++ b/poc-cicd/values.yaml
@@ -1,4 +1,4 @@
-# Default values for simple-depl.
+# Default values for poc-final.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
