--- a/poc-cicd/templates/httpd/imagestream.yaml
+++ b/poc-cicd/templates/httpd/imagestream.yaml
@@ -2,7 +2,6 @@ kind: ImageStream
 apiVersion: image.openshift.io/v1
 metadata:
   name: simple-httpd
-  generation: 2
   namespace: poc-intermedia
   labels:
     app: simple-httpd
@@ -14,8 +13,14 @@ spec:
     local: false
   tags:
     - name: a9cea7709a69675d7f87a4f26010cf85e8f500d5
+      annotations:
+        iconClass: apache
+        openshift.io/display-name: httpd
+        tags: 'httpd,hidden'
+        version: '5' 
       from:
         kind: DockerImage
+        name: 'ocpregistry.azurecr.io/simple-httpd:a9cea7709a69675d7f87a4f26010cf85e8f500d5'
       generation: 2
       importPolicy: {}
       referencePolicy:
