--- a/poc-cicd/templates/nginx/imagestream.yaml
+++ b/poc-cicd/templates/nginx/imagestream.yaml
@@ -11,7 +11,7 @@ spec:
   lookupPolicy:
     local: false
   tags:
-    - name: a9cea7709a69675d7f87a4f26010cf85e8f500d5
+    - name: simple-nginx:a9cea7709a69675d7f87a4f26010cf85e8f500d5
       from:
         kind: DockerImage
         name: >-
