--- a/poc-cicd/templates/nginx/deployment.yaml
+++ b/poc-cicd/templates/nginx/deployment.yaml
@@ -24,6 +24,7 @@ spec:
     spec:
       containers:
         - name: simple-nginx
+          kind: ImageStreamTag
           image: simple-nginx:a9cea7709a69675d7f87a4f26010cf85e8f500d5
           ports:
             - containerPort: 8080
