--- a/poc-cicd/templates/nginx/deploymentconfig.yaml
+++ b/poc-cicd/templates/nginx/deploymentconfig.yaml
@@ -44,6 +44,7 @@ spec:
     spec:
       containers:
         - name: simple-nginx
+          image: 'simple-nginx:a9cea7709a69675d7f87a4f26010cf85e8f500d5'
           ports:
             - containerPort: 8080
               protocol: TCP
