--- a/poc-cicd/templates/nginx/imagestream.yaml
+++ b/poc-cicd/templates/nginx/imagestream.yaml
@@ -11,14 +11,15 @@ spec:
   lookupPolicy:
     local: false
   tags:
-    - name: 'simple-nginx:a9cea7709a69675d7f87a4f26010cf85e8f500d5'
+    - name: a9cea7709a69675d7f87a4f26010cf85e8f500d5
       annotations:
-        openshift.io/imported-from: >-
-          ocpregistry.azurecr.io/simple-nginx:a9cea7709a69675d7f87a4f26010cf85e8f500d5
+        iconClass: nginx
+        openshift.io/display-name: nginx
+        tags: 'nginx,hidden'
+        version: '5'       
       from:
         kind: DockerImage
-        name: >-
-          ocpregistry.azurecr.io/simple-nginx:a9cea7709a69675d7f87a4f26010cf85e8f500d5
+        name: 'ocpregistry.azurecr.io/simple-nginx:a9cea7709a69675d7f87a4f26010cf85e8f500d5'
       generation: 2
       importPolicy: {}
       referencePolicy:
